# MEIISim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: Eqns.hpp  G1.hpp  G2.hpp  G3.hpp  G4.hpp  G5.hpp  G6.hpp  G7.hpp  G8.hpp  M11.hpp  M12.hpp  M13.hpp  M14.hpp  M15.hpp  M16.hpp  M17.hpp  M18.hpp  M21.hpp  M22.hpp  M23.hpp  M24.hpp  M25.hpp  M26.hpp  M27.hpp  M28.hpp  M31.hpp  M32.hpp  M33.hpp  M34.hpp  M35.hpp  M36.hpp  M37.hpp  M38.hpp  M41.hpp  M42.hpp  M43.hpp  M44.hpp  M45.hpp  M46.hpp  M47.hpp  (+104 more)
mathematica/: Dynamica.nb
matlab/: Copy_of_Dynamics_Lee_Shah_Elbow_simplified.asv  Copy_of_Dynamics_Lee_Shah_Elbow_simplified.m  Copy_of_Dynamics_Lee_Shah_Symmetric.asv  Copy_of_Dynamics_Lee_Shah_Symmetric.m  Copy_of_Kinematics_Lee_Shah.asv  Copy_of_Kinematics_Lee_Shah.m  Dynamics_Lee_Shah.asv  Dynamics_Lee_Shah.m  Dynamics_Lee_Shah_Elbow.asv  Dynamics_Lee_Shah_Elbow.m  Dynamics_Lee_Shah_Elbow_speedup.asv  Dynamics_Lee_Shah_Elbow_speedup.m  Dynamics_Lee_Shah_Symmetric.m  Dynamics_Lee_Shah_time.m  Kinematics.m  Kinematics_Lee_Shah.asv  Kinematics_Lee_Shah.m  LinkDynamics.m  MEII_Dynamics.m  MEII_FK.m  MEII_FK_2.m  MEII_FK_3.m  MEII_FK_4.m  MEII_FK_test.asv  MEII_FK_test.m  MEII_IK.asv  MEII_IK.m  MEII_IK_2.asv  MEII_IK_2.m  MEII_IK_3.m  MEII_Kinematics.m  MVG.mat  ModifiedDH.ai  Rx.m  Ry.m  SW_MP_Elbow_FE.txt  TRANSx.m  TRANSz.m  Untitled.m  correctequations.py  (+10 more)
matlab/Backups/: Dynamics_Lee_Shah_Elbow_speedup.m  Kinematics_Parallel.m  (+10 more)
src/: MeiiModel.cpp  MeiiSim.cpp  dll.cpp  dll_dup.cpp  dll_virtual.cpp  sim.cpp  test.cpp  tuner.cpp  virtual_test.cpp
(+314 files in other folders)
